updated blog page, projects page and links, and navbar interaction.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Candal&family=Homemade+Apple&family=Source+Sans+Pro&family=Waiting+for+the+Sunrise&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- FONTS END -->
 
     <title>My Digital Palace by Randee J</title>
